installation: emqttc@v0.2.1-beta addition
Signed-off-by: Leonardo Rossi <leonardo.rossi@studenti.unipr.it>

--- a/rebar.config
+++ b/rebar.config
@@ -1,2 +1,4 @@
 {erl_opts, [debug_info]}.
-{deps, []}.
+{deps, [
+  {emqttc, {git, "https://github.com/emqtt/emqttc.git", {tag, "v0.2.1-beta"}}}
+]}.
