--- a/rebar.config
+++ b/rebar.config
@@ -1,4 +1,5 @@
 {erl_opts, [debug_info]}.
 {deps, [
-  {emqttc, {git, "https://github.com/emqtt/emqttc.git", {tag, "v0.2.1-beta"}}}
+  {emqttc, {git, "https://github.com/emqtt/emqttc.git", {tag, "v0.2.1-beta"}}},
+  {poolboy, {git, "https://github.com/devinus/poolboy.git", {tag, "1.5.1"}}}
 ]}.
